--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A kata to practice coding skills",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
     "url": " "
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jest": "^23.5.0"
+  }
 }
